# maplibre-contour-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  Package.swift  README.md  build.gradle  jitpack.yml  rust-toolchain.toml  settings.gradle  uniffi.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  docs.yml  release.yml
Sources/MaplibreContour/: maplibre_contour_rs.swift
android/: build.gradle  settings.gradle.kts
android/contour/: build.gradle.kts
examples/: generate_tile.rs
scripts/: build-xcframework.sh
src/: buffer.rs  cache.rs  config.rs  contour.rs  decode_image.rs  dem.rs  dem_manager.rs  dem_source.rs  error.rs  ffi.rs  height_tile.rs  isolines.rs  lib.rs  mvt.rs  pipeline.rs  tile.rs  vtpbf.rs
tests/: isolines.rs  pipeline.rs
