[package]
name = "maplibre-contour-rs"
version = "0.3.0"
edition = "2021"
# Bumped from the scaffold's 1.75: the pinned `image`/`geozero` stack needs a
# newer compiler than that. CI builds on stable.
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Generate contour-line vector tiles (MVT) from raster-DEM tiles. A Rust port of maplibre-contour, intended to be embedded on Android/iOS."
repository = "https://github.com/mapeak-com/maplibre-contour-rs"
readme = "README.md"
keywords = ["mvt", "contour", "dem", "maplibre", "vector-tiles"]
categories = ["science::geo"]

# `cdylib` for the Android `.so`, `staticlib` for the iOS `.a`/xcframework,
# `lib` so the crate is still usable as a normal Rust dependency and in tests.
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Decode the raster-DEM tile (Terrarium/Terrain-RGB ships as PNG or WebP).
# Pinned exact: image >= 0.25.6 raises its MSRV past what we target here.
image = { version = "=0.25.10", default-features = false, features = ["png", "webp"] }
# Geometry primitives passed to the MVT encoder.
geo-types = "0.7"
# geo-types -> MVT encoding bridge (and GeoJSON for debugging).
geozero = { version = "0.15", default-features = false, features = [
    "with-mvt",
    "with-geo",
    "with-geojson",
] }
# Error types.
thiserror = "2"
# LRU cache for decoded parent DEM tiles (mirrors maplibre-contour's cache).
lru = "0.18"
# Kotlin/Swift bindings + the `uniffi-bindgen` CLI. Always on: this crate is
# built primarily to be embedded on mobile (mirrors Mapeak-com/pmtiles-mobile).
uniffi = { version = "0.31", features = ["cli"] }

# Generates the Kotlin/Swift sources from the compiled library.
[[bin]]
name = "uniffi-bindgen"

[dev-dependencies]
# Add criterion here when you start benchmarking the hot path.

# Alternative MVT encoder if you outgrow geozero's writer:
# mvt = "0.10"

[profile.release]
# Mobile binaries care about size; tune as needed.
opt-level = 3
lto = "thin"
